Breadcrumb Added on every page

--- a/Home/templates/Home/administration.html
+++ b/Home/templates/Home/administration.html
@@ -5,18 +5,20 @@
 {% block content %}
 
     {% load home_extras %}
-    <!-- Classic Breadcrumbs-->
-{#           <section class="section breadcrumb-classic context-dark">#}
-{#        <div class="container">#}
-{#          <h1>Administration</h1>#}
-{#          <div class="offset-top-10 offset-md-top-35">#}
-{#            <ul class="list-inline list-inline-lg list-inline-dashed p">#}
-{#              <li><a href="{% url 'Home:Home' %}">Home</a></li>#}
-{#              <li><a href="#">Administration</a></li>#}
-{#            </ul>#}
-{#          </div>#}
-{#        </div>#}
-{#      </section>#}
+ <section class="section breadcrumb-classic context-dark">
+        <div class="container">
+          <h1>People</h1>
+          <div class="offset-top-10 offset-md-top-35">
+            <ul class="list-inline list-inline-lg list-inline-dashed p">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="#">Pages</a></li>
+              <li><a href="#">About</a></li>
+              <li>People
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
       <!--A Meeting of Minds-->
 <section class="section section-xl bg-default" style="padding-top: 25px;">
