--- a/Home/templates/Home/all_news.html
+++ b/Home/templates/Home/all_news.html
@@ -6,19 +6,19 @@
 
     {% load home_extras %}
       <!-- Classic Breadcrumbs-->
-      
-{#           <section class="section breadcrumb-classic context-dark">#}
-{#        <div class="container">#}
-{#          <h1>All News</h1>#}
-{#          <div class="offset-top-10 offset-md-top-35">#}
-{#            <ul class="list-inline list-inline-lg list-inline-dashed p">#}
-{#              <li><a href="{% url 'Home:Home' %}">Home</a></li>#}
-{#              <li><a href="{% url 'Home:all-news' %}">All News</a></li>#}
-{##}
-{#            </ul>#}
-{#          </div>#}
-{#        </div>#}
-{#      </section>#}
+
+           <section class="section breadcrumb-classic context-dark">
+        <div class="container">
+          <h3>News</h3>
+          <div class="offset-top-10 offset-md-top-35">
+            <ul class="list-inline list-inline-lg list-inline-dashed p">
+              <li><a href="{% url 'Home:Home' %}">Home</a></li>
+              <li><a href="{% url 'Home:all-news' %}">All News</a></li>
+
+            </ul>
+          </div>
+        </div>
+      </section>
       
       <div id="fb-root"></div>
 <section class="section section-xl bg-default" style="padding-top: 25px;">
