--- a/Home/templates/Home/eligibility.html
+++ b/Home/templates/Home/eligibility.html
@@ -7,18 +7,18 @@
     {% load home_extras %}
     <!-- Classic Breadcrumbs-->
       
-{#                 <section class="section breadcrumb-classic context-dark">#}
-{#        <div class="container">#}
-{#          <h2>Eligibilty</h2>#}
-{#          <div class="offset-top-10 offset-md-top-35">#}
-{#            <ul class="list-inline list-inline-lg list-inline-dashed p">#}
-{#              <li><a href="{% url 'Home:Home' %}">Home</a></li>#}
-{#              <li><a href="#">Eligibilty</a></li>#}
-{# #}
-{#            </ul>#}
-{#          </div>#}
-{#        </div>#}
-{#      </section>#}
+                 <section class="section breadcrumb-classic context-dark">
+        <div class="container">
+          <h2>Eligibilty</h2>
+          <div class="offset-top-10 offset-md-top-35">
+            <ul class="list-inline list-inline-lg list-inline-dashed p">
+              <li><a href="{% url 'Home:Home' %}">Home</a></li>
+              <li><a href="#">Eligibilty</a></li>
+
+            </ul>
+          </div>
+        </div>
+      </section>
 
       <!--A Meeting of Minds-->
 <section class="section section-xl bg-default" style="padding-top: 25px;">
@@ -27,8 +27,7 @@
             <div class="col-lg-4 order-lg-2 text-lg-start"><img class="img-responsive d-inline-block" src="{% static 'images/blog/events-03-420x420.jpg' %}" width="370" height="370" alt=""></div>
             <div class="col-lg-8 order-lg-1 text-lg-start">
               <div class="inset-lg-right-30">
-                <h2 class="fw-bold">Eligibility</h2>
-                <hr class="divider bg-madison divider-lg-0">
+
 
                   <ol class="list-group list-group-numbered">
                       <li class="list-group-item d-flex justify-content-between align-items-start">
