--- a/Home/templates/Home/fees.html
+++ b/Home/templates/Home/fees.html
@@ -7,20 +7,20 @@
     {% load home_extras %}
         <!-- Classic Breadcrumbs-->
 
-{#      #}
-{#                 <section class="section breadcrumb-classic context-dark">#}
-{#        <div class="container">#}
-{#          <h2>Tution Fees</h2>#}
-{#          <div class="offset-top-10 offset-md-top-35">#}
-{#            <ul class="list-inline list-inline-lg list-inline-dashed p">#}
-{#              <li><a href="{% url 'Home:Home' %}">Home</a></li>#}
-{#              <li><a href="#">Tution Fees</a></li>#}
-{# #}
-{#            </ul>#}
-{#          </div>#}
-{#        </div>#}
-{#      </section>#}
-    <section class="section section-xl bg-default" style="padding-top: 25px;">
+
+                 <section class="section breadcrumb-classic context-dark">
+        <div class="container">
+          <h3>Tution Fees</h3>
+          <div class="offset-top-10 offset-md-top-35">
+            <ul class="list-inline list-inline-lg list-inline-dashed p">
+              <li><a href="{% url 'Home:Home' %}">Home</a></li>
+              <li><a href="#">Tution Fees</a></li>
+
+            </ul>
+          </div>
+        </div>
+      </section>
+    <section class="section section-lg bg-default" >
 
       <!--A Meeting of Minds-->
 
@@ -29,7 +29,7 @@
             <div class="col-lg-4 order-lg-2 text-lg-start"><img class="img-responsive d-inline-block" src="{% static 'images/blog/events-03-420x420.jpg' %}" width="370" height="370" alt=""></div>
             <div class="col-lg-8 order-lg-1 text-lg-start">
               <div class="inset-lg-right-30">
-                <h3 class="fw-bold">Tuition Fees for Local Students</h3>
+                <h3 class="fw-bold">For Local Students</h3>
                     <div class="offset-top-30 offset-sm-top-60">
                   <p>In line with the DGHS circular on the expense for MBBS course, our 
 monthly tuition fee has been fixed at Tk. 8,000/= (BDT Eight Thousand 
