--- a/Home/templates/Home/prospectus.html
+++ b/Home/templates/Home/prospectus.html
@@ -9,7 +9,7 @@
           <div class="offset-top-10 offset-md-top-35">
             <ul class="list-inline list-inline-lg list-inline-dashed p">
               <li><a href="{% url 'Home:Home' %}">Home</a></li>
-              <li><a href="#">Prospectus</a></li>
+              <li><a href="#">Prospectus 2021-22</a></li>
  
             </ul>
           </div>
@@ -18,7 +18,6 @@
         <!-- Jobs Start -->
         <div class="container-xxl py-5">
             <div class="container">
-                <h3 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Prospectus</h3>
                 <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.3s">
                 <iframe src="https://drive.google.com/file/d/1MJ9xBAeBORNAzk8dfsTG_Qjmcj5kNl7M/preview" style="width:600px; height:700px;" frameborder="0"></iframe>
             </div>
