--- a/Home/templates/Home/application.html
+++ b/Home/templates/Home/application.html
@@ -6,26 +6,25 @@
 
     {% load home_extras %}
         <!-- Classic Breadcrumbs-->
-{#      <section class="section breadcrumb">#}
-{#        <div class="container">#}
-{#          <div class="offset-top-10 offset-md-top-35">#}
-{#            <ul class="list-inline list-inline-lg list-inline-dashed p">#}
-{#              <li><a href="{% url 'Home:Home' %}">Home</a></li>#}
-{#              <li>Admission Guidelines#}
-{#              </li>#}
-{#            </ul>#}
-{#          </div>#}
-{#        </div>#}
-{#      </section>#}
+                 <section class="section breadcrumb-classic context-dark">
+        <div class="container">
+          <h3>Admission Guidlines</h3>
+          <div class="offset-top-10 offset-md-top-35">
+            <ul class="list-inline list-inline-lg list-inline-dashed p">
+              <li><a href="{% url 'Home:Home' %}">Home</a></li>
+              <li>Admission Guidlines</li>
 
-      <!--A Meeting of Minds-->
-<section class="section section-xl bg-default" style="padding-top: 25px;">
+            </ul>
+          </div>
+        </div>
+      </section>
+
+<section class="section section-lg bg-default">
         <div class="container">
           <div class="row row-50">
             <div class="col-lg-4 order-lg-2 text-lg-start"><img class="img-responsive d-inline-block" src="{% static 'images/blog/events-03-420x420.jpg' %}" width="370" height="370" alt=""></div>
             <div class="col-lg-8 order-lg-1 text-lg-start">
               <div class="inset-lg-right-30">
-                <h3 class="fw-bold">Admission Guidelines</h3>
 
                    <div class="offset-top-30" style="margin-top: 22px;">
                   <p>Applications are to be submitted in prescribed forms obtainable
