--- a/Home/templates/Home/contacts.html
+++ b/Home/templates/Home/contacts.html
@@ -6,18 +6,18 @@
 <!-- Classic Breadcrumbs-->
 
       
-{#           <section class="section breadcrumb-classic context-dark">#}
-{#        <div class="container">#}
-{#          <h2>Contact Us</h2>#}
-{#          <div class="offset-top-10 offset-md-top-35">#}
-{#            <ul class="list-inline list-inline-lg list-inline-dashed p">#}
-{#              <li><a href="{% url 'Home:Home' %}">Home</a></li>#}
-{#              <li><a href="#">Contact Us</a></li>#}
-{# #}
-{#            </ul>#}
-{#          </div>#}
-{#        </div>#}
-{#      </section>#}
+           <section class="section breadcrumb-classic context-dark">
+        <div class="container">
+          <h2>Contact Us</h2>
+          <div class="offset-top-10 offset-md-top-35">
+            <ul class="list-inline list-inline-lg list-inline-dashed p">
+              <li><a href="{% url 'Home:Home' %}">Home</a></li>
+              <li><a href="#">Contact Us</a></li>
+
+            </ul>
+          </div>
+        </div>
+      </section>
       
 <section class="section section-xl bg-default" style="padding-top: 25px;">
         <div class="container">
