--- a/Home/templates/Home/department.html
+++ b/Home/templates/Home/department.html
@@ -5,23 +5,23 @@
     {% load home_extras %}
     
           
-{#                 <section class="section breadcrumb-classic context-dark">#}
-{#        <div class="container">#}
-{#          <h2>Departments</h2>#}
-{#          <div class="offset-top-10 offset-md-top-35">#}
-{#            <ul class="list-inline list-inline-lg list-inline-dashed p">#}
-{#              <li><a href="{% url 'Home:Home' %}">Home</a></li>#}
-{#              <li><a href="#">Department</a></li>#}
-{#              <li><a href="#">{{ departments.department_name }}</a></li>#}
-{# #}
-{# #}
-{#            </ul>#}
-{#          </div>#}
-{#        </div>#}
-{#      </section>#}
+                 <section class="section breadcrumb-classic context-dark">
+        <div class="container">
+          <h3>{{ departments.department_name }} Department</h3>
+          <div class="offset-top-10 offset-md-top-35">
+            <ul class="list-inline list-inline-lg list-inline-dashed p">
+              <li><a href="{% url 'Home:Home' %}">Home</a></li>
+              <li><a href="#">Department</a></li>
+              <li><a href="#">{{ departments.department_name }}</a></li>
+
+
+            </ul>
+          </div>
+        </div>
+      </section>
       <!-- Classic Breadcrumbs-->
       <!-- vertical link Tabs-->
-<section class="section section-xl bg-default" style="padding-top: 25px;">
+        <section class="section section-lg bg-default">
         <div class="container">
           <div class="tabs-custom tabs-vertical tabs-line tabs-line-1" id="tabs-7">
             <!--Nav tabs-->
@@ -42,31 +42,48 @@
               </div>
 
       </section>
-          <section class="section section-xl bg-catskill">
+
+          <section class="section section-sm bg-catskill">
         <div class="container">
-          <h2 class="fw-bold">Faculty members</h2>
+          <h3 class="fw-bold">Faculty members</h3>
           <hr class="divider bg-madison">
-          <div class="row row-50 text-md-start offset-top-60">
-              {% for instance in faculty_members %}
-            <div class="col-md-6 col-xl-4">
-              <div class="unit unit-sm flex-column flex-md-row unit-spacing-lg">
-                <div class="unit-left"><img class="img-responsive d-inline-block img-rounded" src="{{ instance.faculty_member_profile_image.url }}" width="110" height="110" alt=""></div>
-                <div class="unit-body">
-                  <h6 class="fw-bold text-primary"><a href="team-member-profile.html">{{ instance.faculty_member_name }}</a></h6>
-                  <div class="offset-sm-top-30">
-                    <ul class="list list-unstyled">
-                      <li><span class="icon icon-xs mdi mdi-phone text-middle text-gray" style="font-size: 24px; line-height: 24px"></span><a class="d-inline-block text-black inset-left-10" href="tel:#">#</a></li>
-                      <li><span class="icon icon-xs mdi mdi-email-outline text-middle text-gray" style="font-size: 24px; line-height: 24px"></span><a class="d-inline-block inset-left-10" href="{{ instance.faculty_member_contact}}">{{ instance.faculty_member_contact}}</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
+
+        <div class="row row-30 text-lg-start offset-top-60">
+            {% for instance in faculty_members %}
+
+            <div class="col-md-6 col-lg-3">
+                <img class="img-responsive d-inline-block img-rounded" src="{{ instance.faculty_member_profile_image.url }}" width="270" height="270" alt="">
               <div class="offset-top-20">
-                <p>{{ instance.faculty_member_designation }}</p>
+                <h6 class="fw-bold text-primary"><a href="#">{{ instance.faculty_member_name }}</a></h6>
+              </div>
+              <div class="offset-top-5">
+                  <p>{{ instance.faculty_member_designation }}, {{ instance.faculty_member_department }}</p>
+
               </div>
             </div>
             {% endfor %}
           </div>
+{#          <div class="row row-50 text-md-start offset-top-60">#}
+{#              {% for instance in faculty_members %}#}
+{#            <div class="col-md-6 col-xl-4">#}
+{#              <div class="unit unit-sm flex-column flex-md-row unit-spacing-lg">#}
+{#                <div class="unit-left"><img class="img-responsive d-inline-block img-rounded" src="{{ instance.faculty_member_profile_image.url }}" width="110" height="110" alt=""></div>#}
+{#                <div class="unit-body">#}
+{#                  <h6 class="fw-bold text-primary"><a href="team-member-profile.html">{{ instance.faculty_member_name }}</a></h6>#}
+{#                  <div class="offset-sm-top-30">#}
+{#                    <ul class="list list-unstyled">#}
+{#                      <li><span class="icon icon-xs mdi mdi-phone text-middle text-gray" style="font-size: 24px; line-height: 24px"></span><a class="d-inline-block text-black inset-left-10" href="tel:#">#</a></li>#}
+{#                      <li><span class="icon icon-xs mdi mdi-email-outline text-middle text-gray" style="font-size: 24px; line-height: 24px"></span><a class="d-inline-block inset-left-10" href="{{ instance.faculty_member_contact}}">{{ instance.faculty_member_contact}}</a></li>#}
+{#                    </ul>#}
+{#                  </div>#}
+{#                </div>#}
+{#              </div>#}
+{#              <div class="offset-top-20">#}
+{#                <p>{{ instance.faculty_member_designation }}</p>#}
+{#              </div>#}
+{#            </div>#}
+{#            {% endfor %}#}
+{#          </div>#}
         </div>
       </section>
 
