--- a/Home/templates/Home/governing_body.html
+++ b/Home/templates/Home/governing_body.html
@@ -5,6 +5,18 @@
 {% block content %}
 
     {% load home_extras %}
+     <section class="section breadcrumb-classic context-dark">
+        <div class="container">
+          <h1>Governing Body</h1>
+          <div class="offset-top-10 offset-md-top-35">
+            <ul class="list-inline list-inline-lg list-inline-dashed p">
+              <li><a href="{% url 'Home:Home' %}">Home</a></li>
+              <li><a href="{% url 'Home:governing_body' %}">Governing Body</a></li>
+
+            </ul>
+          </div>
+        </div>
+      </section>
 
       <!--A Meeting of Minds-->
       <section class="section section-xl bg-default" style="padding-top: 25px;">
@@ -13,7 +25,6 @@
           <div class="row row-50">
             <div class="col-lg-12 order-lg-1 text-lg-start">
               <div class="inset-lg-right-30">
-                <h3 class="fw-bold">GOVERNING BODY</h3>
                     <div class="offset-top-30 offset-sm-top-60">
                   <p>As per the instruction & approval of the Ministry of Health & Family Welfare
                         and Dhaka University, a 15 member Governing Body has been formed
