--- a/Home/templates/Home/news_details.html
+++ b/Home/templates/Home/news_details.html
@@ -4,20 +4,20 @@
 {% load static %}
 {% block content %}
 <!-- Classic Breadcrumbs-->
-{#      #}
-{#                 <section class="section breadcrumb-classic context-dark">#}
-{#        <div class="container">#}
-{#          <h1>News Details</h1>#}
-{#          <div class="offset-top-10 offset-md-top-35">#}
-{#            <ul class="list-inline list-inline-lg list-inline-dashed p">#}
-{#              <li><a href="{% url 'Home:Home' %}">Home</a></li>#}
-{#              <li><a href="{% url 'Home:all-news' %}">All News</a></li>#}
-{#                             <li>{{ object.title}}#}
-{#              </li>#}
-{#            </ul>#}
-{#          </div>#}
-{#        </div>#}
-{#      </section>#}
+
+                 <section class="section breadcrumb-classic context-dark">
+        <div class="container">
+          <h3>News Details</h3>
+          <div class="offset-top-10 offset-md-top-35">
+            <ul class="list-inline list-inline-lg list-inline-dashed p">
+              <li><a href="{% url 'Home:Home' %}">Home</a></li>
+              <li><a href="{% url 'Home:all-news' %}">All News</a></li>
+                             <li>{{ object.title}}
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
       <!-- Latest news-->
 <section class="section section-xl bg-default" style="padding-top: 25px;">
         <div class="container">
